force-app/main/default/objects/pca_Visit__c/pca_Visit__c.object-meta.xml
<CustomObject>
    <description>Visit to vet</description>
    <label>Visit</label>
    <nameField>
        <displayFormat>VS-{0000}</displayFormat>
        <label>Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>