force-app/main/default/objects/pca_Visit__c/fields/Concern__c.field-meta.xml
<CustomField>
    <fullName>Concern__c</fullName>
    <description>Concern for Visit</description>
    <inlineHelpText>What is the need for this visit?</inlineHelpText>
    <label>Concern</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>