force-app/main/default/objects/pca_Visit__c/fields/Pet__c.field-meta.xml
<CustomField>
    <fullName>Pet__c</fullName>
    <description>Master lookup to Pet record</description>
    <inlineHelpText>Select the pet this visit is for</inlineHelpText>
    <label>Pet</label>
    <referenceTo>pca_Pet__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>