force-app/main/default/objects/pca_Visit__c/fields/Pet_Care_Provider__c.field-meta.xml
<CustomField>
    <fullName>Pet_Care_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pet Care Provider</description>
    <label>Pet Care Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pet Care Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>