force-app/main/default/objects/pca_Visit__c/fields/Remedy__c.field-meta.xml
<CustomField>
    <fullName>Remedy__c</fullName>
    <description>Remedy for the visit</description>
    <inlineHelpText>How was the concern resolved?</inlineHelpText>
    <label>Remedy</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>